[#14077] Remove CONSTSUM and Fully Adopt CONSTSUM_OPTIONS / CONSTSUM_RECIPIENTS (#14078)